changed some stuff

--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 
 <body>
-    <h1>Game of Life</h1>
-    <canvas id="canvas" />
+    <div align="center">
+        <h1>Game of Life</h1>
+        <canvas id="canvas" />
+    </div>
 </body>
 
 </html>
