changed some styles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,21 @@
 
 <head>
     <title>Game of Life</title>
+
     <script type="text/javascript" src="app.js"></script>
+
+    <style>
+        h1 {
+            background-color: black;
+            color: white;
+            font-family: sans-serif;
+        }
+
+        #canvas {
+            border-style: solid;
+            border-color: gray;
+        }
+    </style>
 </head>
 
 <body>
