replaced generation code, added next generation button (for debugging purposes)

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
         <h1>Game of Life</h1>
         <canvas id="canvas" />
     </div>
+
+    <div align="center">
+        <button id="nextGen">Next Generation</button>
+    </div>
+
 </body>
 
 </html>
