added gosper glider gun and comments

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     </div>
 
     <div align="center">
-        <button id="nextGen">Next Generation</button>
+        <button id="btn-generate">Generate a Gosper Glider Gun</button>
+        <button id="btn-next-generation" style="display: none">Next Generation</button>
+        <button id="btn-restart">Restart</button>
     </div>
 
 </body>
